--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,127 @@
+
 # Site settings
-title: Mortgy's Blog
-email: m.mortgy@mortgy.com
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://mortgy.com" # the base hostname & protocol for your site
-#twitter_username: jekyllrb
-github_username:  mortgy
-linkedin_username: mortgy
-# Build settings
-markdown: kramdown
+
+url: "http://mortgy.github.io"
+
+# If you're hosting your site at a Project repository on GitHub pages
+# (http://yourusername.github.io/repository-name)
+# and NOT your User repository (http://yourusername.github.io)
+# then add in the baseurl here, like this: "/repository-name"
+
+baseurl: /personal-jekyll-theme
+
+google-tracking-id: "<YOUR GOOGLE TRACKING ID>"
+
+#############
+# HTML Head #
+#############
+
+author: "Muhammed Mortgy"
+lang: "en"
+title: "{ Muhammed Mortgy }"
+favicon: "/img/favicon.ico"
+description: "Blog and website of John Smith, blogging mainly for tech. Opinions expressed are mine."
+keywords: "mortgy, muhammed, personal, resume"
+
+################
+# Intro layout #
+################
+
+black-favicon: "/img/black-lab-glass.ico"
+background-img: "../img/intro-bg.jpg"
+me-img: "/img/jetpacktocat.png"
+
+##############################
+# Dynamic Text on the header #
+##############################
+
+dynamic-typing: True
+shuffle: True	# Shuffle the lines.
+loop: True
+loop-count:	False # Set False for infinite loop, or set any number for finite loop.
+type-speed:	10		# Default 10
+start-delay: 200	# Default 200
+delete-delay: 5000	# Default 5000
+lines:			# You can add HTML Tags in the Text
+  - text: "The lower you fall, the higher you'll fly."
+  - text: "Where’s your will to be weird?"
+
+########
+# Blog #
+########
+
+post-preview-words: 128
+
+paginate: 5
+
+fb-share: True
+twitter-share: True
+reddit-share: True
+disqus-shortname: "mortgy"
+
+###############
+# Life Events #
+###############
+
+events:
+  #- image: "/img/career/spidertocat.png"
+  #  date: "September 2013 - Today"
+  #  description: "Saving the neighborhood!"
+  #- image: "/img/career/baracktocat.jpg"
+  #  date: "September 2007 - August 2013"
+  #  description: "Started coding"
+
+# First image of the Career timeline
+career-img: "/img/career/default.png"
+
+##################
+# Contact layout #
+##################
+
+email: "m.mortgy@mortgy.com"
+
+##################
+# Social Buttons #
+##################
+
+social:
+  - title: "facebook"
+    url: "http://facebook.com/"
+  - title: "twitter"
+    url: "http://twitter.com/"
+  - title: "youtube"
+    url: "http://youtube.com/"
+  - title: "github"
+    url: "https://github.com/mortgy"
+  - title: "rss"
+    url: "/feed.xml"
+
+############
+# 404 page #
+############
+
+404-img: "/img/labtocat.png"
+
+################################################################################
+
+# Tread carefully if you want to change the variables below this point!
+
+# Navigation bar links
+# Blog link in the blog and post pages will point to the blog.html#blog
+# In the default page it will point to the preview of the last post
+
+pages_list:
+  About: 'about'
+  Blog: 'blog'
+  Career: 'career'
+  Contact: 'contact'
+
+# Pagination path
+paginate_path: "blog/page:num"
+
+# Enable minification SASS
+sass:
+  style: compressed
+
+# Exclusion list from the generated _site
+exclude: ["Rakefile", "LICENSE", "readme.markdown", "vendor"]
