--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ url: "http://mortgy.github.io"
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
 
-baseurl: /personal-jekyll-theme
+baseurl: 
 
 google-tracking-id: "<YOUR GOOGLE TRACKING ID>"
 
