--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ url: "http://mortgy.github.io"
 
 baseurl: 
 
-google-tracking-id: "<YOUR GOOGLE TRACKING ID>"
+google-tracking-id: "UA-68937967-1"
 
 #############
 # HTML Head #
@@ -18,9 +18,9 @@ google-tracking-id: "<YOUR GOOGLE TRACKING ID>"
 
 author: "Muhammed Mortgy"
 lang: "en"
-title: "{ Muhammed Mortgy }"
+title: "{ Mortgy }"
 favicon: "/img/favicon.ico"
-description: "Blog and website of John Smith, blogging mainly for tech. Opinions expressed are mine."
+description: "Blog and website of Muhammed Mortgy, blogging mainly for tech. Opinions expressed are mine."
 keywords: "mortgy, muhammed, personal, resume"
 
 ################
@@ -64,12 +64,12 @@ disqus-shortname: "mortgy"
 ###############
 
 events:
-  #- image: "/img/career/spidertocat.png"
-  #  date: "September 2013 - Today"
-  #  description: "Saving the neighborhood!"
-  #- image: "/img/career/baracktocat.jpg"
-  #  date: "September 2007 - August 2013"
-  #  description: "Started coding"
+  - image: "/img/career/spidertocat.png"
+    date: "September 2013 - Today"
+    description: "Saving the neighborhood!"
+  - image: "/img/career/baracktocat.jpg"
+    date: "September 2007 - August 2013"
+    description: "Started coding"
 
 # First image of the Career timeline
 career-img: "/img/career/default.png"
@@ -85,12 +85,8 @@ email: "m.mortgy@mortgy.com"
 ##################
 
 social:
-  - title: "facebook"
-    url: "http://facebook.com/"
-  - title: "twitter"
-    url: "http://twitter.com/"
-  - title: "youtube"
-    url: "http://youtube.com/"
+  - title: "linkedin"
+    url: "http://linkedin.com/in/mortgy"
   - title: "github"
     url: "https://github.com/mortgy"
   - title: "rss"
